syntax = "proto3";

option go_package = "protobuf";
package protobuf;

service Build {
    // The stream keyword is specified before both the request type and response
    // type to make it as bidirectional streaming RPC method.

    rpc BuildInfo (Request) returns (stream Response) {}
}

message Request {
    string hash = 1;
}

message Response {
    string outputLine = 1;
}
